--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -11,6 +11,7 @@
         "test": "jest --watchAll"
     },
     "dependencies": {
+        "node-fetch": "^3.3.2",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
@@ -30,6 +31,7 @@
         "eslint-plugin-react-refresh": "^0.4.14",
         "globals": "^15.12.0",
         "jest": "^29.7.0",
-        "vite": "^6.0.1"
+        "vite": "^6.0.1",
+        "whatwg-fetch": "^3.6.20"
     }
 }
