--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -11,6 +11,7 @@
         "test": "jest --watchAll"
     },
     "dependencies": {
+        "jest-environment-jsdom": "^29.7.0",
         "node-fetch": "^3.3.2",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
@@ -19,12 +20,17 @@
     "devDependencies": {
         "@babel/core": "^7.26.0",
         "@babel/preset-env": "^7.26.0",
+        "@babel/preset-react": "^7.26.3",
         "@eslint/js": "^9.15.0",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.1.0",
         "@types/jest": "^29.5.14",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "^4.3.4",
         "babel-jest": "^29.7.0",
+        "esbuild": "^0.24.2",
         "eslint": "^9.15.0",
         "eslint-plugin-react": "^7.37.2",
         "eslint-plugin-react-hooks": "^5.0.0",
